nobase_include_HEADERS =  \
	yat/CommonHeader.h \
	yat/config-linux.h \
	yat/config-macosx.h \
	yat/config-win32.h \
	yat/Exception.h \
	yat/Exception.i \
	yat/Inline.h \
	yat/LogHelper.h \
	yat/Portability.h \
	yat/TargetPlatform.h \
	yat/any/Any.h \
	yat/any/GenericContainer.h \
	yat/bitsstream/BitsRecord.h \
	yat/bitsstream/BitsStream.h \
	yat/bitsstream/Endianness.h \
	yat/file/FileName.h \
	yat/memory/Allocator.h \
	yat/memory/DataBuffer.h \
	yat/memory/SharedPtr.h \
	yat/memory/MemBuf.h \
	yat/network/Address.h \
	yat/network/ClientSocket.h \
	yat/network/SocketException.h \
	yat/network/Socket.h \
	yat/plugin/IPlugInFactory.h \
	yat/plugin/IPlugInInfo.h \
	yat/plugin/IPlugInObject.h \
	yat/plugin/IPlugInObjectWithAttr.h \
	yat/plugin/PlugIn.h \
	yat/plugin/PlugInManager.h \
	yat/plugin/PlugInSymbols.h \
	yat/plugin/PlugInTypes.h \
	yat/system/SysUtils.h \
	yat/threading/Barrier.h \
	yat/threading/Condition.h \
	yat/threading/Implementation.h \
	yat/threading/Message.h \
	yat/threading/MessageQ.h \
	yat/threading/Mutex.h \
	yat/threading/ReadersWriterMutex.h \
	yat/threading/Pulser.h \
	yat/threading/Semaphore.h \
	yat/threading/SharedObject.h \
	yat/threading/Task.h \
	yat/threading/Thread.h \
	yat/threading/Utilities.h \
	yat/threading/SyncAccess.h \
	yat/time/Timer.h \
	yat/time/Time.h \
	yat/utils/Callback.h \
	yat/utils/CommandLine.h \
	yat/utils/Logging.h \
	yat/utils/NonCopyable.h \
	yat/utils/ReferenceCounter.h \ \
	yat/utils/Signal.h \
	yat/utils/Singleton.h \
	yat/utils/String.h \
	yat/utils/StringTemplate.h \
	yat/utils/StringTokenizer.h \
	yat/utils/URI.h \
	yat/utils/XString.h
	
